--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,6 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: members-only_production
+  username: members-only
+  password: <%= ENV['MEMBERS-ONLY_DATABASE_PASSWORD'] %>
